--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,6 +14,12 @@
     <div class="row justify-content-center">
         <div class="col-4">
             <h4 class="p-2 font-weight-bold">Please sign in</h4>
+            <!--<div th:if="${param.error}" class="alert alert-error">
+                Invalid username and password.
+            </div>
+            <div th:if="${param.logout}" class="alert alert-success">
+                You have been logged out.
+            </div>-->
             <form class="form-signin" th:action="@{/login}" method="post">
                 <input type="text" class="form-control" name="username" placeholder="login" required autofocus/>
                 <input type="text" class="form-control" name="password" placeholder="password" required/>
