--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -18,7 +18,7 @@
 <body>
 <nav class="navbar navbar-dark  bg-dark">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#nav-home">
-        <span>User "</span><span th:text="${user.login}"/><span>" with role </span><span th:text="${user.roles}"></span>
+        <span>User "</span><span th:text="${user.login}"/><span>" with role </span><span th:text="${user.stringRoles}"></span>
     </a>
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -34,7 +34,7 @@
                     Admin
                 </a>
                 <a sec:authorize="hasAnyAuthority('ROLE_USER')" class="nav-item nav-link  " id="nav-profile-tab-p" data-toggle="tab" href="#v-pills-profile" role="tab"
-                    aria-controls="nav-profile" aria-selected="false">
+                   aria-controls="nav-profile" aria-selected="false">
                     User
                 </a>
             </div>
@@ -62,20 +62,20 @@
                             <h4 class="m-2">All users</h4>
                             <div class="row bg-light container">
                                 <div class="container m-3">
-                                <table class="table table-striped">
-                                    <thead>
-                                    <tr>
-                                        <th>Id</th>
-                                        <th>Login</th>
-                                        <th>Password</th>
-                                        <th>Role</th>
-                                        <th>Edit</th>
-                                        <th>Delete</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="users">
-                                    </tbody>
-                                </table>
+                                    <table class="table table-striped">
+                                        <thead>
+                                        <tr>
+                                            <th>Id</th>
+                                            <th>Login</th>
+                                            <th>Password</th>
+                                            <th>Role</th>
+                                            <th>Edit</th>
+                                            <th>Delete</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="users">
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
@@ -84,23 +84,23 @@
                             <div class="container-fluid bg-light">
                                 <div class="row justify-content-center p-3">
                                     <div class="col-4">
-                                        <form th:action="@{/adduser}" method="post">
+                                        <form>
                                             <div class="form-group text-center font-weight-bold">
-                                                <label for="login">Login</label>
-                                                <input type="text" class="form-control" id="login" name="login">
+                                                <label for="addLogin">Login</label>
+                                                <input type="text" class="form-control" id="addLogin" name="login">
                                             </div>
                                             <div class="form-group text-center font-weight-bold">
-                                                <label for="password">Password</label>
-                                                <input type="text" class="form-control" id="password" name="password">
+                                                <label for="addPassword">Password</label>
+                                                <input type="text" class="form-control" id="addPassword" name="password">
                                             </div>
                                             <div class="form-group text-center font-weight-bold">
-                                                <label for="rolesAdd">Role</label>
-                                                <select id="rolesAdd" class="custom-select" name="role_id" multiple>
+                                                <label for="addRoles">Role</label>
+                                                <select id="addRoles" class="custom-select" name="role_id" multiple>
                                                     <option value="1" selected>USER</option>
                                                     <option value="2">ADMIN</option>
                                                 </select>
                                             </div>
-                                            <button type="submit" class="btn btn-success d-block mx-auto">Add New User</button>
+                                            <button type="button" onclick="addUser()" class="btn btn-success d-block mx-auto">Add New User</button>
                                         </form>
                                     </div>
                                 </div>
@@ -146,7 +146,7 @@
         </div>
     </div>
 </div>
-<div th:each="user: ${users}" class="modal fade" th:id="'modalEdit'+${user.id}" tabindex="-1" role="dialog" aria-labelledby="modalEditLabel" aria-hidden="true">
+<div class="modal fade" id="modalEdit" tabindex="-1" role="dialog" aria-labelledby="modalEditLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -159,14 +159,14 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col">
-                            <form th:action="@{/update/{id}(id=${user.id})}" method="post" name="id" th:value="${user.id}" th:id="'user'+${user.id}">
+                            <form name="formEdit" id="editModalUser">
                                 <div class="form-group text-center font-weight-bold">
                                     <label for="idUserUpdate">ID</label>
-                                    <input type="text" class="form-control" id="idUserUpdate" name="id" th:value="${user.id}" disabled>
+                                    <input type="text" class="form-control" id="idUserUpdate" name="id" disabled>
                                 </div>
                                 <div class="form-group text-center font-weight-bold">
                                     <label for="loginUserUpdate">Login</label>
-                                    <input type="text" class="form-control" id="loginUserUpdate" name="login" th:value="${user.login}">
+                                    <input type="text" class="form-control" id="loginUserUpdate" name="login" required>
                                 </div>
                                 <div class="form-group text-center font-weight-bold">
                                     <label for="passwordUserUpdate">Password</label>
@@ -174,7 +174,7 @@
                                 </div>
                                 <div class="form-group text-center font-weight-bold">
                                     <label for="rolesEdit">Role</label>
-                                    <select id="rolesEdit" class="custom-select" name="role_id" multiple>
+                                    <select id="rolesEdit" class="custom-select" name="role_id" multiple required>
                                         <option value="1" selected>USER</option>
                                         <option value="2">ADMIN</option>
                                     </select>
@@ -186,7 +186,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary" name="id" th:value="${user.id}" th:form="'user'+${user.id}">Save changes</button>
+                <button type="button" onclick="editUser()" class="btn btn-primary" form="editModalUser">Save changes</button>
             </div>
         </div>
     </div>
@@ -194,7 +194,7 @@
 <!--</editor-fold>-->
 
 <!--<editor-fold desc="modal delete">-->
-<div th:each="user: ${users}" class="modal fade" th:id="'modalDelete'+${user.id}" tabindex="-1" role="dialog" aria-labelledby="modalDeleteLabel" aria-hidden="true">
+<div class="modal fade" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="modalDeleteLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -207,22 +207,22 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col">
-                            <form th:action="@{/delete/{id}(id=${user.id})}" method="get" th:id="'userDelete'+${user.id}">
+                            <form id="deleteModalUser">
                                 <div class="form-group text-center font-weight-bold">
                                     <label for="idUserDelete">ID</label>
-                                    <input type="text" class="form-control" id="idUserDelete" name="id" th:value="${user.id}" disabled>
+                                    <input type="text" class="form-control" id="idUserDelete" name="id" disabled>
                                 </div>
                                 <div class="form-group text-center font-weight-bold">
                                     <label for="loginUserDelete">Login</label>
-                                    <input type="text" class="form-control" id="loginUserDelete" name="login" th:value="${user.login}" disabled>
+                                    <input type="text" class="form-control" id="loginUserDelete" name="login" disabled>
                                 </div>
                                 <div class="form-group text-center font-weight-bold">
                                     <label for="passwordUserDelete">Password</label>
-                                    <input type="text" class="form-control" id="passwordUserDelete" name="password" th:value="${user.password}" disabled>
+                                    <input type="text" class="form-control" id="passwordUserDelete" name="password" disabled>
                                 </div>
                                 <div class="form-group text-center font-weight-bold">
                                     <label for="roleUserDelete">Role</label>
-                                    <input type="text" class="form-control" id="roleUserDelete" name="role" th:value="${user.roles}" disabled>
+                                    <input type="text" class="form-control" id="roleUserDelete" name="role" disabled>
                                 </div>
                             </form>
                         </div>
@@ -231,7 +231,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-danger" name="id" th:value="${user.id}" th:form="'userDelete'+${user.id}">Delete</button>
+                <button type="button" onclick="deleteUser()" class="btn btn-danger" form="deleteModalUser">Delete</button>
             </div>
         </div>
     </div>
