--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -18,7 +18,7 @@
 <body>
 <nav class="navbar navbar-dark  bg-dark">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#nav-home">
-        <span>User "</span><span th:text="${user.login}"/><span>" with role </span><span th:text="${user.stringRoles}"></span>
+        <span>User "</span><span th:text="${user.login}"/><span>" with role </span><span th:text="${user.roles}"></span>
     </a>
     <ul class="navbar-nav">
         <li class="nav-item">
