--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -18,7 +18,10 @@
 <body>
 <nav class="navbar navbar-dark  bg-dark">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#nav-home">
-        <span>User "</span><span th:text="${user.login}"/><span>" with role </span><span th:text="${user.roles}"></span>
+        <span sec:authentication="name"></span>
+        <span th:each="authority : ${#authentication.getAuthorities()}"
+              th:text="${authority.getAuthority()} + ' '">
+    </span>
     </a>
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -44,7 +47,7 @@
              style="background: #edeef0">
             <div id="admin_panel"></div>
             <div class="tab-content" id="nav-tabContent-p">
-                <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+                <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')" class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
                      aria-labelledby="nav-home-tab-p">
                     <h2>Admin panel</h2>
                     <!-- Nav tabs -->
